<resources>
    <string name="app_name">fundamentals</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="_13">13+</string>
    <string name="test_name">Мстители:\nФинал</string>
    <string name="movie_poster">movie poster</string>
    <string name="test_genre">Action</string>
    <string name="test_125_reviews">125 Reviews</string>
    <string name="storyline_test">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movies_list">Movies list</string>
    <string name="like">Like</string>
    <string name="cast">Cast</string>
    <string name="back">Back</string>
    <string name="action_genre">Action</string>
    <string name="storyline">Storyline</string>
    <string name="reviews_number">"%d Reviews"</string>
    <string name="minutes_number">"%d MIN"</string>
    <string name="exception_log_text">%s\n%s</string>
    <string name="cant_load_films">Can\'t load films!</string>
    <string name="cant_load_film_details">Can\'t load film details!</string>

    <string name="channel_new_movie">New movie</string>
    <string name="channel_new_movie_description">New best movies</string>
    <string name="schedule">Schedule</string>
    <string name="movie_scheduled">Movie scheduled!</string>
    <string name="movie_not_scheduled">Can not schedule movie!</string>

    <string name="movie_card_transition_name">movie_card_%1$s</string>
    <string name="movie_card_detail_transition_name">movie_card_detail</string>
</resources>