<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    tools:context=".MovieDetailsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsFragment">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_poster" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/mask_poster"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


        <View
            android:id="@+id/guidline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster" />

        <TextView
            android:background="@drawable/rectangle2"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:textAppearance="@style/age_text_style"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginBottom="@dimen/half_margin_bad"
            android:text="@string/_13"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/name" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_height="wrap_content"
            android:text="@string/test_name"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:shadowColor="@android:color/white"
            android:shadowRadius="1.5"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textAppearance="@style/huge_title"
            app:layout_constraintBaseline_toBaselineOf="@+id/guidline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_genre"
            android:textColor="@color/genre_color"
            android:textSize="@dimen/text_medium"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:layout_marginStart="@dimen/main_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:backgroundTint="@android:color/transparent"
            android:rating="4"
            android:progressTint="@color/genre_color"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/main_margin"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/half_margin_medium"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:text="@string/test_125_reviews"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/rating"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:gravity="center_vertical"
            android:id="@+id/header_story"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/big_margin"
            android:textAppearance="@style/header_inside"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin"
            android:shadowColor="@android:color/white"
            android:shadowRadius="1.5"
            android:shadowDx="1"
            android:shadowDy="1"
            android:text="@string/storyline"
            app:layout_constraintTop_toBottomOf="@id/rating" />


        <TextView
            android:paddingTop="@dimen/half_margin_medium"
            android:paddingBottom="@dimen/half_margin_medium"
            android:id="@+id/story"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:gravity="center_vertical"
            android:alpha="0.75"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_height="wrap_content"
            android:text="@string/storyline_test"
            app:layout_constraintTop_toBottomOf="@id/header_story" />

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/big_margin"
            android:textAppearance="@style/header_inside"
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:shadowColor="@android:color/white"
            android:shadowRadius="1.5"
            android:shadowDx="1"
            android:shadowDy="1"
            app:layout_constraintTop_toBottomOf="@id/story" />

        <Button
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:textSize="@dimen/text_secondary"
            android:textColor="@color/text_secondary"
            android:drawableLeft="@drawable/arrow_left"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginTop="@dimen/main_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:lineSpacingExtra="@dimen/line_spacing"
            android:gravity="center_vertical"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            android:layout_margin="@dimen/small_margin"
            app:spanCount="4"
            tools:itemCount="4"
            tools:listitem="@layout/actor_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
