<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/half_margin_bad"
    android:background="@drawable/bg"
    card_view:cardBackgroundColor="@color/card_background"
    card_view:cardCornerRadius="@dimen/card_radius"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:contentPadding="@dimen/card_padding">

    <!-- Main Content View -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/movie"
            card_view:layout_constraintBottom_toTopOf="@+id/name"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_poster" />

        <ImageView
            android:id="@+id/imageViewMask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/mask"
            card_view:layout_constraintBottom_toTopOf="@+id/name"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_genre"
            android:textColor="@color/genre_color"
            android:textSize="@dimen/text_secondary"
            card_view:layout_constraintBottom_toTopOf="@+id/rating"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0"
            card_view:layout_constraintStart_toStartOf="parent" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:backgroundTint="@color/card_background"
            android:background="@color/card_background"
            android:progressTint="@color/genre_color"
            android:numStars="5"
            android:rating="4"
            android:stepSize="0.1"
            android:isIndicator="true"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_medium"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintBottom_toBottomOf="@+id/imageView"
            card_view:layout_constraintStart_toEndOf="@id/rating"
            tools:text="12 Reviews" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Avengers"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary"
            card_view:layout_constraintBottom_toTopOf="@+id/time"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="120 MIN"
            android:textColor="@color/text_third"
            android:textSize="@dimen/text_secondary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/name" />


        <TextView
            android:background="@drawable/rectangle2"
            android:layout_width="wrap_content"
            android:textAppearance="@style/age_text_style"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_medium"
            android:layout_marginTop="@dimen/half_margin_medium"
            android:text="@string/_13"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_like"
            android:layout_marginEnd="@dimen/margin_like"
            android:src="@drawable/like"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/like" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

