<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin_bad"
    android:background="@drawable/bg"
    card_view:cardBackgroundColor="@color/card_background"
    card_view:cardCornerRadius="@dimen/card_radius"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:contentPadding="@dimen/card_padding">

    <!-- Main Content View -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="166dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/photo_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:padding="1dp"
            android:src="@drawable/movie"
            card_view:layout_constraintBottom_toTopOf="@+id/name_text"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:shapeAppearanceOverlay="@style/filmImageView" />

        <ImageView
            android:id="@+id/imageViewMask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/mask"
            card_view:layout_constraintBottom_toTopOf="@+id/name_text"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/genre_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/very_small_margin"
            android:text="@string/test_genre"
            android:textColor="@color/genre_color"
            android:textSize="@dimen/text_secondary"
            card_view:layout_constraintBottom_toTopOf="@+id/rating_bar"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_margin"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="@color/genre_color"
            android:rating="4"
            android:stepSize="0.1"
            card_view:layout_constraintBottom_toBottomOf="@+id/photo_image"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/reviews_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_medium"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_secondary"
            card_view:layout_constraintBottom_toBottomOf="@+id/photo_image"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@id/rating_bar"
            tools:text="12 Reviews" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/very_small_margin"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_primary"
            card_view:layout_constraintBottom_toTopOf="@+id/time_text"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/photo_image"
            tools:ignore="RtlSymmetry"
            tools:text="Avengers" />

        <TextView
            android:id="@+id/time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/very_small_margin"
            android:textColor="@color/text_third"
            android:textSize="@dimen/text_secondary"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/name_text"
            tools:ignore="RtlSymmetry"
            tools:text="120 MIN" />


        <TextView
            android:id="@+id/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_medium"
            android:layout_marginTop="@dimen/half_margin_medium"
            android:background="@drawable/rectangle2"
            android:gravity="center"
            android:text="@string/_13"
            android:textAppearance="@style/age_text_style"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/like"
            android:paddingStart="@dimen/margin_like"
            android:paddingTop="@dimen/margin_like"
            android:paddingEnd="@dimen/margin_like"
            android:paddingBottom="@dimen/margin_like"
            android:src="@drawable/ic_favorite_white_18dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

